organized and commented code as well as added TODO stuff

--- a/theGame.html
+++ b/theGame.html
@@ -2,6 +2,7 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="game.js "></script>
+    <script src="model.js "></script>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
     <link href="animate.css" rel="stylesheet"  />
@@ -10,7 +11,7 @@
 <body>
   <div id="main" class="container">
   <h1 class="first animated zoomInUp">Hello friendly gamer person</h1>
-  <a href="#" class="button animated zoomOut">Goodbye!</a>
+  <a href="#" class="button rock"><img style="width:250px"src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Glacier_park1.jpg/1280px-Glacier_park1.jpg"></a>
   <button class="animated ZoomInUp hello">"eh.. Hello program... >_>"</button>
   <button class="hidden q1">tada!</button>
 </div>
