--- a/theGame.html
+++ b/theGame.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width">
 <title>the name of the game</title>
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
@@ -16,10 +18,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="js/ripples.min.js"></script>
-
 <script src="js/customJquery.js"></script>
 <script src="js/model.js "></script>
 <script src="js/game.js "></script>
+<!--[if lt IE 9]>
+  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 </head>
 <body>
 <div class="fixed-top d2">
@@ -52,11 +56,16 @@
     <div class="row">
       <div class="col-md-12 col-sm-12 col-lg-12">
         <div class="row">
-            <h1 class="primary-text-color">Fiendishly clever javascript code</h1>
+            <h1 class="primary-text-color txt">Fiendishly clever javascript code</h1>
         </div>
         <div class="row">
             <div>
               <img class="rock" width="240" src="img/theRock.jpg" style="float:left;" >
+            </div>
+        </div>
+        <div class="row">
+            <div>
+
             </div>
         </div>
       </div>
@@ -72,13 +81,7 @@
           <h3 class="modal-title">Welcome valued User</h3>
         </div>
         <div class="modal-body">
-          <p>Fore aut non quem incididunt, varias reprehenderit deserunt quem offendit,
-            cillum proident ne reprehenderit, quem ad laborum, quo possumus praetermissum,
-            si ne illustriora, hic appellat coniunctione, do labore aliqua quo probant. In
-            probant voluptatibus quo mentitum est laboris. Quorum mandaremus graviterque.
-            Mentitum id velit, dolor aut litteris, ea varias illustriora, ita commodo ita
-            ingeniis, iis nulla appellat incurreret, aut irure amet summis pariatur ita ubi
-            quis dolore veniam proident, consequat sed ingeniis.</p>
+          <p>hello</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" data-dismiss="modal">Dismiss</button>
