text to screen to speach now working properly

--- a/theGame.html
+++ b/theGame.html
@@ -60,7 +60,7 @@
         </div>
         <div class="row">
             <div>
-              <img class="rock" width="240" src="img/theRock.jpg" style="float:left;" >
+              <a href="#"><img class="rock" width="240" src="img/theRock.jpg" style="float:left;" ></a>
             </div>
         </div>
         <div class="row">
